# coderag

./: .gitignore  CLAUDE.md  README.md  docker-compose.yaml  pyproject.toml
docs/: code_rag_mcp_design.md  industry_practices.md
mcp/: README.md  __init__.py  code_rag_mcp.py
src/: app.py  build_index.py  customer_retriever.py  multi_repo_index.py  query_index.py  test_build_index.py  verify_index.py
